# retro-stamp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  try_it.py
docs/: CODING_STANDARDS.md  IMPLEMENTATION_PLAN.md  KNOWN_ISSUES.md  PROJECT_BRIEF.md  REQUIREMENTS.md  TECHNICAL_DESIGN.md
src/retro_stamp/: __init__.py  core.py  exceptions.py  metadata.py  renderer.py
tests/: conftest.py  test_core.py  test_metadata.py  test_renderer.py
tests/fixtures/: sample.heic
